[package]
name = "yew-app"
version = "0.1.0"
authors = ["Razvan Rotari <razvanrotari@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
console_error_panic_hook = "0.1.6"




